--- a/Pigeon_website/Web.config
+++ b/Pigeon_website/Web.config
@@ -15,7 +15,7 @@
         <add assembly="MySql.Web, Version=6.9.8.0, Culture=neutral, PublicKeyToken=C5687FC88969C44D" />
       </assemblies>
     </compilation>
-    <httpRuntime targetFramework="4.5" />
+    <httpRuntime targetFramework="4.5" requestValidationMode="2.0" />
     <membership defaultProvider="MySQLMembershipProvider">
       <providers>
         <remove name="MySQLMembershipProvider" />
