--- a/Pigeon_website/packages.config
+++ b/Pigeon_website/packages.config
@@ -3,6 +3,7 @@
   <package id="bootstrap" version="3.3.6" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
   <package id="jQuery" version="2.2.3" targetFramework="net45" />
+  <package id="jQuery.UI.Combined" version="1.11.4" targetFramework="net45" />
   <package id="Microsoft.AspNet.SignalR" version="2.2.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.SignalR.Core" version="2.2.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.SignalR.JS" version="2.2.0" targetFramework="net45" />
