--- a/PigeonsLibrairy/UnitTesting/PigeonsTesting.csproj
+++ b/PigeonsLibrairy/UnitTesting/PigeonsTesting.csproj
@@ -79,8 +79,14 @@
   </Choose>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="DAOCrudTesting.cs" />
+    <Compile Include="TestDAO\DAOCrudTesting.cs" />
+    <Compile Include="TestDAO\EventDAOTesting.cs" />
+    <Compile Include="TestDAO\FollowingDAOTesting.cs" />
+    <Compile Include="TestDAO\GetByDAOTesting.cs" />
+    <Compile Include="TestDAO\MessageDAOTesting.cs" />
     <Compile Include="TestDAO\personDAO_Test.cs" />
+    <Compile Include="TestDAO\TaskDAOTesting.cs" />
+    <Compile Include="TestDAO\groupDAO_Test.cs" />
     <Compile Include="TestService\personService_Test.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -95,15 +101,6 @@
   <ItemGroup>
     <None Include="App.config">
       <SubType>Designer</SubType>
-    </None>
-    <None Include="OrderedPersonTests.orderedtest">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Include="OrderedGroupTests.orderedtest">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Include="OrderedTaskTests.orderedtest">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="packages.config" />
   </ItemGroup>
