--- a/PigeonsLibrairy/UnitTesting/UnitTesting.csproj
+++ b/PigeonsLibrairy/UnitTesting/UnitTesting.csproj
@@ -79,10 +79,8 @@
   </Choose>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TestDAO\DAOCrudTesting.cs" />
     <Compile Include="TestDAO\EventDAOTesting.cs" />
-    <Compile Include="TestDAO\FollowingDAOTesting.cs" />
-    <Compile Include="TestDAO\GetByDAOTesting.cs" />
+    <Compile Include="TestDAO\followingDAO_Test.cs" />
     <Compile Include="TestDAO\MessageDAOTesting.cs" />
     <Compile Include="TestDAO\personDAO_Test.cs" />
     <Compile Include="TestDAO\TaskDAOTesting.cs" />
