--- a/PigeonsLibrairy/PigeonsLibrairy/packages.config
+++ b/PigeonsLibrairy/PigeonsLibrairy/packages.config
@@ -1,8 +1,32 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
+  <package id="jQuery" version="1.6.4" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR" version="2.2.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR.Client" version="2.2.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR.Core" version="2.2.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR.JS" version="2.2.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR.Owin" version="1.2.2" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR.ServiceBus" version="2.2.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR.SqlServer" version="2.2.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR.SystemWeb" version="2.2.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR.Utils" version="2.2.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net45" />
+  <package id="Microsoft.Owin" version="3.0.1" targetFramework="net45" />
+  <package id="Microsoft.Owin.Host.SystemWeb" version="3.0.1" targetFramework="net45" />
+  <package id="Microsoft.Owin.Security" version="3.0.1" targetFramework="net45" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
+  <package id="Microsoft.WindowsAzure.ConfigurationManager" version="3.2.1" targetFramework="net45" />
   <package id="MySql.Data" version="6.9.8" targetFramework="net45" />
   <package id="MySql.Data.Entities" version="6.8.3.0" targetFramework="net45" />
   <package id="MySql.Data.Entity" version="6.9.8" targetFramework="net45" />
   <package id="MySql.Web" version="6.9.8" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net45" />
+  <package id="Owin" version="1.0" targetFramework="net45" />
+  <package id="WindowsAzure.ServiceBus" version="3.1.7" targetFramework="net45" />
 </packages>
