--- a/Pigeon_website/packages.config
+++ b/Pigeon_website/packages.config
@@ -9,8 +9,9 @@
   <package id="Microsoft.AspNet.SignalR.Core" version="2.2.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.SignalR.JS" version="2.2.0" targetFramework="net45" />
   <package id="Microsoft.Owin" version="3.0.1" targetFramework="net45" />
-  <package id="Microsoft.Owin.Host.SystemWeb" version="2.1.0" targetFramework="net45" />
+  <package id="Microsoft.Owin.Host.SystemWeb" version="3.0.1" targetFramework="net45" />
   <package id="Microsoft.Owin.Security" version="3.0.1" targetFramework="net45" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="MySql.Data" version="6.9.8" targetFramework="net45" />
   <package id="MySql.Data.Entities" version="6.8.3.0" targetFramework="net45" />
   <package id="MySql.Web" version="6.9.8" targetFramework="net45" />
